# bio-design

./: LICENSE  README.md  app.py  main.py  pyproject.toml  run.py  run_api.py  start_api.py  test_api.py
experiments/: agent_supervisor.ipynb  multi-agent-collaboration.ipynb  multi_agent.ipynb  my_agent.py  reflection.ipynb
src/: LangChain_Agent.py
src/agent/: need_finder.py
src/agents/: evaluator.py  need_finder.py  need_finder_fixed.py  need_finder_realtime.py
src/docs/: API_Documentation.md  API_README.md  NEED_STATE_REPORT.md  OPENAI_SETUP.md  REALTIME_README.md
static/: index.html
tests/: test_agent.ipynb  test_api.py  test_openai.py  test_realtime.py
