[project]
name = "bio-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langgraph>=0.4.7",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "langgraph-supervisor>=0.0.27",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.3.18",
    "langgraph-swarm>=0.0.11",
    "langchain-experimental>=0.3.4",
    "langchain-anthropic>=0.3.14",
    "langchain-tavily>=0.2.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
]
